<resources>
    <string name="app_name">MemoRoute</string>
    <string name="search_t">Search routes</string>
    <string name="add_t">+ New Route</string>

    <string name="title">Route title: </string>
    <string name="descrip">Route description (optional): </string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="locus_name">Locus Name</string>
    <string name="count_from">Count from:</string>
    <string name="add">Add:</string>
    <string name="add_text">Add text</string>
    <string name="hide">hide</string>
    <string name="ask_del_route">Delete this route?</string>
    <string name="confirm">Confirm</string>
    <string name="tap_to_record">Tap to record</string>
    <string name="tap_to_play">Tap to play</string>
    <string name="set_as_cover">Set as cover</string>
    <string name="move">Move</string>
    <string name="choose_pos">Choose new position</string>
    <string name="edit">Edit</string>
    <string name="TAG_HOOKS">Hooks</string>
    <string name="TAG_SHOWBUTTON">Show Button</string>
    <string name="TAG_EXTRAS">Extras</string>
    <string name="TAG_ADDEXTRAS">\"ADDEXTRAS\"</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>


</resources>
