<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/locus_add_extras"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/add"/>


        <Button
            android:id="@+id/locus_textButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/abc_on"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


        <Button
            android:id="@+id/locus_microButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/microphone" />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/locus_imgButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/img_on"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/locus_extra_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@android:drawable/ic_menu_close_clear_cancel"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="#dddddd"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/locus_add_extras"
        android:layout_above="@+id/locus_full_name"/>

    <TextView
        android:id="@+id/locus_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/locus_name"
        android:textSize="25dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/hookShowButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_above="@id/locus_full_name"
        android:background="@drawable/show_hook"/>

    <LinearLayout
        android:id="@+id/locus_textLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="#dddddd"
        android:gravity="center_horizontal"
        android:layout_margin="20dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/extra_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="testing Text"
            android:layout_margin="30dp" />
        <Button
            android:id="@+id/extra_textHideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hide"/>

    </LinearLayout>

</RelativeLayout>